--- a/pages/loops/loops.html
+++ b/pages/loops/loops.html
@@ -26,6 +26,7 @@
       </header>
     <h1>Bucles</h1>
 
-    <script src="/JS/loops/while.js"></script>
+    <!-- <script src="/JS/loops/while.js"></script> -->
+    <script src="/JS/loops/for.js"></script>
 </body>
 </html>
