Loops, intro a DOM, innerHTML, condiotionals

--- a/pages/conditionals/conditionals.html
+++ b/pages/conditionals/conditionals.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS - Conditionals</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    <h1>JS Condicionales</h1>
+    <div class="container-lg">
+        <h1>JS Condicionales</h1>
+        <div class="row">
+            <div class="col-8 bg-primary">
+                <h2 class="text-light text-center p-3">Lista de frutas</h2>
+                <ul class="list-group" id="fruit-list">
+                    
+                </ul>
+            </div>
+            <div class="col-4 bg-dark">
+                <div class="d-flex flex-column">
+                    <h2 class="text-center text-light p-4">TOTAL A PAGAR</h2>
+                    <div id="total-amount" class="text-light flex-grow-1">$ 0</div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!-- <script src="/JS/conditionals/if.js"></script> -->
