--- a/pages/arrays/arrays.html
+++ b/pages/arrays/arrays.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrays</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
     <div class="container-lg">
         <h1>Arrays</h1>
         <div class="row">
-            <div class="col-12">
+            <div class="col-6">
                 <!-- MÉTODOS DE ARRAYS -->
-                <button class="btn btn-primary" onclick="listFruits()">Listar frutas</button>
+                <button class="btn btn-primary btn-sm" onclick="listFruits()">Listar frutas</button>
+                <button class="btn btn-sm btn-dark mx-1 text-light"
+                        onclick="resolveExcercise()">Split Strings</button>
+            </div>
+            <div class="col-6">
+                <textarea class="form-control" rows="4" id="textArea"></textarea>
             </div>
         </div>
         <!-- <form> -->
@@ -23,9 +29,9 @@
                 <input type="text" class="form-control" id="fruits" 
                        aria-describedby="fruitInput" placeholder="Ingrese nombre de la fruta">
             </div>
-            <button class="btn btn-primary" onclick="addFruit()" >Añadir</button>
-            <button class="btn btn-danger" onclick="deleteFruit()">Eliminar fruta</button>
-            <button class="btn btn-success" onclick="countVowels()">Contar vocales</button>
+            <button class="btn btn-primary btn-sm" onclick="addFruit()" >Añadir</button>
+            <button class="btn btn-danger btn-sm" onclick="deleteFruit()">Eliminar fruta</button>
+            <button class="btn btn-success btn-sm" onclick="countVowels()">Contar vocales</button>
         <!-- </form> -->
         <div class="row">
             <code class="col-12" id="result"></code>
