--- a/pages/arrays/arrays.html
+++ b/pages/arrays/arrays.html
@@ -16,7 +16,7 @@
                 <!-- MÉTODOS DE ARRAYS -->
                 <button class="btn btn-primary btn-sm" onclick="listFruits()">Listar frutas</button>
                 <button class="btn btn-sm btn-dark mx-1 text-light"
-                        onclick="resolveExcercise()">Split Strings</button>
+                        onclick="resolveExcercise()">Resolver ejercicio</button>
             </div>
             <div class="col-6">
                 <textarea class="form-control" rows="4" id="textArea"></textarea>
