--- a/pages/arrays/arrays.html
+++ b/pages/arrays/arrays.html
@@ -7,28 +7,67 @@
     <title>Arrays</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
 </head>
 <body>
     <div class="container-lg">
         <h1>Arrays</h1>
         <div class="row">
-            <div class="col-6">
+            <div class="col">
                 <!-- MÉTODOS DE ARRAYS -->
                 <button class="btn btn-primary btn-sm" onclick="listFruits()">Listar frutas</button>
-                <button class="btn btn-sm btn-dark mx-1 text-light"
-                        onclick="resolveExcercise()">Resolver ejercicio</button>
-            </div>
-            <div class="col-6">
-                <textarea class="form-control" rows="4" id="textArea"></textarea>
+                <button class="btn btn-sm btn-dark mx-1 text-light" data-bs-toggle="collapse"                              data-bs-target="#collapseExcersise" onclick="resolveExcercise()">
+                    Resolver ejercicio
+                </button>
+                <button class="btn btn-primary btn-sm" data-bs-toggle="collapse" data-bs-target="#collapseFilter">Filter</button>
+                <div class="collapse py-2 row" id="collapseExcersise">
+                    <div class="col-6">
+                        <h3>Ejercicio: </h3>
+                     Leer una cadena de texto en un formulario. <br>
+                        Posteriormente, mostrar la siguiente información: 
+                        <ol type="a">
+                            <li>Generar un array con la función split().</li>
+                            <li>Primera palabra, última palabra, </li>
+                            <li>Las palabras colocadas en orden inverso, </li>
+                            <li>Las palabras ordenadas de la a la z  </li>
+                            <li>Las palabras ordenadas de la z a la a.</li>
+                        </ol>
+                        
+                    </div>
+                    <div class="col-6">
+                        <div class="py-3">
+                            <button class="btn btn-success btn-sm" onclick="countWords()">Count Word</button>
+                            <button class="btn btn-success btn-sm" onclick="return false">Revert Word</button>
+                            <button class="btn btn-success btn-sm" onclick="return false">F/L Word</button>
+                            <button class="btn btn-success btn-sm" onclick="return false">Order A-Z</button>
+                            <button class="btn btn-success btn-sm" onclick="return false">Order Z-A</button>
+                        </div>
+                        <textarea class="form-control" rows="4" id="textArea"></textarea>
+                    </div>
+                </div>
+                <div id="collapseFilter" class="p-3">
+                    <button class="btn btn-primary" onclick="filterByMembership()">Filtrar por estado</button>
+                    <button class="btn btn-primary" onclick="findAdultCelebrity()">Find</button>
+                    <button class="btn btn-primary" onclick="countAgeAmount()">Count</button>
+                </div>
             </div>
         </div>
         <!-- <form> -->
-            <div class="mb-3">
-                <label for="fruits" class="form-label">Ingresar frutas</label>
-                <!-- onkeyup="addFruit(event)" -->
-                <input type="text" class="form-control" id="fruits" 
-                       aria-describedby="fruitInput" placeholder="Ingrese nombre de la fruta">
+            <div class="row">
+                <div class="mb-3 col-6">
+                    <label for="newFruit" class="form-label">Ingresar frutas</label>
+                    <!-- onkeyup="addFruit(event)" -->
+                    <input type="text" class="form-control" id="newFruit" 
+                           aria-describedby="fruitInput" placeholder="Ingrese nombre de la fruta">
+                </div>
+                <div class="mb-3 col-6">
+                    <label for="fruitToSearch" class="form-label">Ingrese criterio búsqueda</label>
+                    <!-- onkeyup="addFruit(event)" -->
+                    <input type="text" class="form-control" id="fruitToSearch" onkeyup="searchFruit()"
+                           placeholder="Fruta a buscar">
+                </div>
             </div>
+            
             <button class="btn btn-primary btn-sm" onclick="addFruit()" >Añadir</button>
             <button class="btn btn-danger btn-sm" onclick="deleteFruit()">Eliminar fruta</button>
             <button class="btn btn-success btn-sm" onclick="countVowels()">Contar vocales</button>
