--- a/pages/arrays/arrays.html
+++ b/pages/arrays/arrays.html
@@ -76,6 +76,11 @@
             <code class="col-12" id="result"></code>
         </div>
     </div>
+    <form onsubmit="enviarFormulario(event)">
+        <input type="number" min="18" required>
+        <input type="email" name="email" id="" required>
+        <button type="submit">Enviar</button>
+    </form>
     
     <script src="/JS/arrays/methods.js"></script>
 </body>
