forms HTML structure

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
               <li><a href="/pages/operators.html" class="nav-link px-2 text-white">Operadores</a></li>
               <li><a href="/pages/functions/functions.html" class="nav-link px-2 text-white">Funciones</a></li>
               <li><a href="/pages/arrays/arrays.html" class="nav-link px-2 text-white">Arreglos</a></li>
+              <li><a href="/pages/forms/forms.html" class="nav-link px-2 text-white">Formularios</a></li>
             </ul>
     
           </div>
         </div>
-      </header>
+    </header>
     <div class="container-lg py-3">
         <h1>JAVASCRIPT - MODULO 2</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quisquam quia, magni assumenda, atque dolor aliquam debitis quasi accusantium a praesentium iusto tenetur maiores placeat error iure nemo consectetur illum.
