Promises, then, catch, ASync await,try, catch, sweetalert

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
               <li>
                 <a href="/pages/arrays/arrays.html" class="nav-link px-2 text-white">Arreglos</a>
               </li>
+              <li>
+                <a href="/pages/async/async.html" class="nav-link px-2 text-white">Async</a>
+              </li>
             </ul>
             
           </div>
