--- a/pages/signup/signup.html
+++ b/pages/signup/signup.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/styles.css">
-
 </head>
 
 <body>
@@ -87,7 +86,8 @@
             </div>
         </div>
     </div>
-    <script src="/bootstrap.min.js"></script>
+    <button id="btn">Swal</button>
+    <!-- <script src="/assets/bootstrap-5.0.2-dist/js/"></script> -->
     <script src="/JS/signup.js"></script>
 </body>
 
